@@ -84,7 +84,7 @@ EOW
         "Dan Book <dbook\@cpan.org>"
       ],
       "dist_name" => "Mojo-IOLoop-Stream-Role-LineBuffer",
-      "dist_version" => "0.002",
+      "dist_version" => "0.003",
       "license" => "artistic_2",
       "module_name" => "Mojo::IOLoop::Stream::Role::LineBuffer",
       "recursive_test_files" => 1,
@@ -95,6 +95,7 @@ EOW
       },
       "test_requires" => {
         "File::Spec" => 0,
+        "IO::Pipely" => 0,
         "Module::Metadata" => 0,
         "Test::More" => "0.88"
       }
@@ -103,6 +104,7 @@ EOW
 
     my %fallback_build_requires = (
       "File::Spec" => 0,
+      "IO::Pipely" => 0,
       "Module::Metadata" => 0,
       "Test::More" => "0.88"
     );
