@@ -1,4 +1,5 @@
 {{$NEXT}}
+  - Use IO::Pipely for portable tests
 
 0.002     2018-03-26 01:27:34 EDT
   - Add dependency on Role::Tiny
